# VibeSync

./: .gitignore  .pre-commit-config.yaml  CI_CD_SETUP.md  README.md  VERSIONING.md  render.yaml
.github/: PRE_COMMIT_GUIDE.md  dependabot.yml
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: auth.py  events.py  main.py  models.py  server.py  state.py  version.py
backend/app/core/: config.py
backend/app/logic/: mood_parser.py  vibe.py
backend/app/prompts/: dj_persona.py
backend/app/routers/: auth.py
backend/app/services/: llm.py  logger.py  recommendation_strategies.py  recommendations.py  spotify.py  spotify_client.py  voice.py
backend/app/utils/: exceptions.py  logger.py  models.py
backend/tests/: conftest.py  test_events.py  test_events_dj.py
backend/tests/logic/: test_mood_parser.py  test_vibe.py
backend/tests/services/: test_llm.py  test_recommendations.py  test_spotify_client.py  test_voice.py
docs/: AI_DJ_SPEC.md  AI_DJ_TASKS.md  CI_CD_SETUP.md  architecture.md  system_diagrams.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  version.js
frontend/src/components/: JoinRoom.jsx  Login.jsx  Player.jsx  Queue.jsx  RoomHeader.jsx
frontend/src/styles/: index.css
scripts/: README.md  bump-version.sh  generate_coverage_badge.sh
