[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibesync-backend"
version = "0.2.4"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-socketio>=5.11.0",
    "python-dotenv>=1.0.0",
    "spotipy>=2.23.0",
    "httpx>=0.28.1",
    "edge-tts>=7.2.7",
    "google-genai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.9",
]

[dependency-groups]
dev = [
    "coverage-badge>=1.1.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
[project.scripts]
dev = "app.server:run_dev"

[tool.hatch.build.targets.wheel]
packages = ["app"]
